# gecko-mediaplayer

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.in  gecko-mediaplayer.schemas  gecko-mediaplayer.spec  gecko-mediaplayer.spec.in
debian/: changelog  control  copyright  docs  install  links  rules  watch
debian/patches/: 0001-nomozalloc.patch  0002-Remove-call-to-empty-NPP_Initialize.patch  avoid_libtool.patch  debian-changes-0.9.9-1  fix_NPNVSupportsWindowless_missing.patch  force-no-gsettings.patch  remove_rpath.patch  series
po/: POTFILES.in  cs.gmo  cs.po  es.gmo  es.po  fr.gmo  fr.po  gecko-mediaplayer.pot  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  tr.gmo  tr.po
src/: Makefile.am  Makefile.in  memmem_compat.c  memmem_compat.cpp  memmem_compat.h  np_entry.cpp  npn_gate.cpp  npp_gate.cpp  npplat.h  nsIScriptableGeckoMediaPlayer.idl  nsScriptablePeer.cpp  nsScriptablePeer.h  plugin.cpp  plugin.h  plugin_dbus.cpp  plugin_dbus.h  plugin_list.cpp  plugin_list.h  plugin_setup.cpp  plugin_setup.h  plugin_types.h  plugin_types_dvx.cpp  plugin_types_qt.cpp  plugin_types_rm.cpp  plugin_types_std.cpp  plugin_types_wmp.cpp  pluginbase.h
src/libgmlib/: Makefile.in
